kubedefs/dbdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    name: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: zarrcloud/vprofiledb
        imagePullPolicy: Always
        volumeMounts:
        - name: vprodb-data
          mountPath: /var/lib/mysql
        ports:
        - name: vprodb-port
          containerPort: 3306
    volumes:
     - name: vprodb-data
       persistentVolumeClaim:
         claimName: vprodb-pvc
