kubedefs/appsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
  labels:
    name: vproapp-svc
spec:
    selector:
      app: vproapp
    ports:
    - name: vproapp-svc-port
      protocol: TCP
      port: 8080
      targetPort: vproapp-port
    type: ClusterIP
