kubedefs/appingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  labels:
    name: vproapp-ingress
    annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
   - host: vproapp.lazaai.xyz
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: vproapp-svc
             port:
               number: 8080
